[gd_scene load_steps=2 format=3 uid="uid://d2cdxu6hm5r00"]

[ext_resource type="Script" uid="uid://b70em753mxofx" path="res://Script/Ability/DashStrike/dash_strike.gd" id="1_tgqf5"]

[node name="DashStrike" type="Node2D"]
script = ExtResource("1_tgqf5")
